fixed_spelling_error

--- a/templates/mydata14/home.html
+++ b/templates/mydata14/home.html
@@ -63,7 +63,7 @@
 
 <!-- Accordion starts -->
     <div id="message-content" class="span8">
-    <h4>Aswers to other questions...</h4>
+    <h4>Answers to other questions...</h4>
     <br>
         <div class="panel-group" id="accordion">
 
